crates/rstest-bdd/tests/ui_macros/placeholder_missing_param.rs
//! UI compile-fail fixture for missing placeholder parameter in step function.
use rstest_bdd_macros::given;

#[given("a number {count:u32}")]
fn step() {}

fn main() {}
